P2 done and working

--- a/P2/Vagrantfile
+++ b/P2/Vagrantfile
@@ -9,6 +9,7 @@ Vagrant.configure(2) do |config|
   config.vm.provision "shell", path:"deploy.sh"
 
   config.vm.provider "virtualbox" do |v|
+    v.customize ["modifyvm", :id, "--name", "vpacS"]
     v.name = "vpacS"
     v.memory = "2048"
     v.cpus = "2"
