--- a/p3/cluster.yml
+++ b/p3/cluster.yml
@@ -1,6 +1,14 @@
 apiVersion: k3d.io/v1alpha5
-kind: Simple
+kind: Application
 metadata:
   name: argocluster
-servers: 1
-agents: 2
+  namespace: argocd
+spec:
+  project: default
+  source:
+    repoURL: https://github.com/ValiSpac/IoT-vpac.git
+    targetRevision: HEAD
+    path: confs
+  destination:
+    server: https://kubernetes.default.svc
+    namespace: dev
