--- a/p3/cluster.yml
+++ b/p3/cluster.yml
@@ -1,3 +1,10 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: argocd-config-map
+data:
+  admin.enabled: 'false'
+---
 apiVersion: k3d.io/v1alpha5
 kind: Application
 metadata:
