--- a/bonus/argocd/cluster2.yaml
+++ b/bonus/argocd/cluster2.yaml
@@ -9,7 +9,7 @@ spec:
     server: https://kubernetes.default.svc
   source:
     path: confs
-    repoURL: https://github.com/ValiSpac/IoT-vpac.git
+    repoURL: http://gitlab-svc.gitlab.svc.cluster.local/root/iot-app.git
     targetRevision: HEAD
     directory:
       recurse: false
@@ -22,3 +22,15 @@ spec:
       enabled: true
     syncOptions:
       - CreateNamespace=true
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: gitlab-repo
+  namespace: argocd
+  labels:
+    argocd.argoproj.io/secret-type: repository
+stringData:
+  type: git
+  url: http://gitlab-svc.gitlab.svc.cluster.local/root/iot-app.git
+  insecure: "true"
