--- a/p2/Vagrantfile
+++ b/p2/Vagrantfile
@@ -5,6 +5,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "generic/debian12"
   config.vm.box_version = "4.3.12"
 
+  config.vm.hostname = "xvoorvaaS"
   config.vm.synced_folder ".", "/vagrant"
   config.vm.network "private_network", ip: "192.168.56.110"
   config.vm.provision "shell", path: "script.sh"
